force-app/main/default/objects/Shadikhana_Settings__c/Shadikhana_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Urdu Shadikhana portal SMS notification settings</description>
    <label>Shadikhana Settings</label>
</CustomObject>