force-app/main/default/objects/Shadikhana_Settings__c/fields/Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Admin_Email__c</fullName>
    <description>Admin email address for booking request alerts and reply-to on customer emails</description>
    <label>Admin Email</label>
    <type>Email</type>
</CustomField>