force-app/main/default/objects/Shadikhana_Settings__c/fields/Admin_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Admin_Mobile_Number__c</fullName>
    <description>Admin mobile number(s) for SMS alerts on new booking requests. Use comma-separated values for multiple numbers (e.g. 6364054881, 9849939703). Each number receives a separate SMS.</description>
    <label>Admin Mobile Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>