force-app/main/default/objects/Shadikhana_Settings__c/fields/Default_Daily_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Daily_Rate__c</fullName>
    <defaultValue>8000</defaultValue>
    <label>Default Daily Rate (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>