force-app/main/default/objects/Shadikhana_Settings__c/fields/Email_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Email_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Send booking notification emails to customers and admin</description>
    <label>Email Enabled</label>
    <type>Checkbox</type>
</CustomField>