force-app/main/default/objects/Shadikhana_Settings__c/fields/Footer_Additional_Phone__c.field-meta.xml
<CustomField>
    <fullName>Footer_Additional_Phone__c</fullName>
    <description>Additional footer contact number and secondary SMS alert recipient</description>
    <label>Footer Additional Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>