force-app/main/default/objects/Shadikhana_Settings__c/fields/Hall_Catering_Charge_Per_Guest__c.field-meta.xml
<CustomField>
    <fullName>Hall_Catering_Charge_Per_Guest__c</fullName>
    <defaultValue>450</defaultValue>
    <label>Hall Catering Charge Per Guest (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>