force-app/main/default/objects/Shadikhana_Settings__c/fields/Hall_Comfortable_Guests__c.field-meta.xml
<CustomField>
    <fullName>Hall_Comfortable_Guests__c</fullName>
    <defaultValue>350</defaultValue>
    <label>Hall Comfortable Guest Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>