force-app/main/default/objects/Shadikhana_Settings__c/fields/Hall_Decoration_Charge__c.field-meta.xml
<CustomField>
    <fullName>Hall_Decoration_Charge__c</fullName>
    <defaultValue>25000</defaultValue>
    <label>Hall Decoration Service Charge (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>