force-app/main/default/objects/Shadikhana_Settings__c/fields/Hall_Seating_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Hall_Seating_Capacity__c</fullName>
    <defaultValue>500</defaultValue>
    <label>Hall Seating Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>