force-app/main/default/objects/Shadikhana_Settings__c/fields/Ntfy_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Ntfy_Access_Token__c</fullName>
    <description>Optional ntfy access token for private/protected topics</description>
    <label>ntfy Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>