force-app/main/default/objects/Shadikhana_Settings__c/fields/Ntfy_Server_URL__c.field-meta.xml
<CustomField>
    <fullName>Ntfy_Server_URL__c</fullName>
    <defaultValue>&quot;https://ntfy.sh&quot;</defaultValue>
    <description>Open source ntfy server URL. Use https://ntfy.sh or your self-hosted ntfy instance.</description>
    <label>ntfy Server URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>