force-app/main/default/objects/Shadikhana_Settings__c/fields/Ntfy_Topic__c.field-meta.xml
<CustomField>
    <fullName>Ntfy_Topic__c</fullName>
    <description>ntfy topic subscribed by the admin mobile app for booking alerts</description>
    <label>ntfy Topic</label>
    <length>128</length>
    <type>Text</type>
</CustomField>