force-app/main/default/objects/Shadikhana_Settings__c/fields/Portal_Admin_Password__c.field-meta.xml
<CustomField>
    <fullName>Portal_Admin_Password__c</fullName>
    <label>Portal Admin Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>