force-app/main/default/objects/Shadikhana_Settings__c/fields/Portal_Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Portal_Full_Address__c</fullName>
    <label>Portal Full Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>