force-app/main/default/objects/Shadikhana_Settings__c/fields/Portal_Gallery_Exterior_Id__c.field-meta.xml
<CustomField>
    <fullName>Portal_Gallery_Exterior_Id__c</fullName>
    <label>Portal Gallery Exterior Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>