force-app/main/default/objects/Shadikhana_Settings__c/fields/Portal_Login_Notes__c.field-meta.xml
<CustomField>
    <fullName>Portal_Login_Notes__c</fullName>
    <label>Portal Login Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>