force-app/main/default/objects/Shadikhana_Settings__c/fields/Portal_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_Login_URL__c</fullName>
    <description>Portal login URL included in admin SMS alerts</description>
    <label>Portal Login URL</label>
    <type>Url</type>
</CustomField>