force-app/main/default/objects/Shadikhana_Settings__c/fields/Portal_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_Site_URL__c</fullName>
    <description>Public booking portal site URL included in SMS alerts</description>
    <label>Portal Site URL</label>
    <type>Url</type>
</CustomField>