force-app/main/default/objects/Shadikhana_Settings__c/fields/Portal_Venue_Name__c.field-meta.xml
<CustomField>
    <fullName>Portal_Venue_Name__c</fullName>
    <label>Portal Venue Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>