force-app/main/default/objects/Shadikhana_Settings__c/fields/SMS_Enabled__c.field-meta.xml
<CustomField>
    <fullName>SMS_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Send SMS to admin when a new booking request is submitted</description>
    <label>SMS Enabled</label>
    <type>Checkbox</type>
</CustomField>