force-app/main/default/objects/Shadikhana_Settings__c/fields/SMS_Gateway_Api_Key__c.field-meta.xml
<CustomField>
    <fullName>SMS_Gateway_Api_Key__c</fullName>
    <description>Shared secret for the Android SMS gateway REST API (X-Api-Key header)</description>
    <label>SMS Gateway API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>