force-app/main/default/objects/Shadikhana_Settings__c/fields/SMS_Provider__c.field-meta.xml
<CustomField>
    <fullName>SMS_Provider__c</fullName>
    <description>SMS delivery provider: Twilio cloud API or Android SIM gateway</description>
    <label>SMS Provider</label>
    <length>40</length>
    <type>Text</type>
</CustomField>