force-app/main/default/objects/Shadikhana_Settings__c/fields/Twilio_Account_SID__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Account_SID__c</fullName>
    <description>Twilio Account SID used for SMS callouts</description>
    <label>Twilio Account SID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>