force-app/main/default/objects/Shadikhana_Settings__c/fields/Twilio_Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Auth_Token__c</fullName>
    <description>Twilio Auth Token used for SMS callouts from portal settings</description>
    <label>Twilio Auth Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>