force-app/main/default/objects/Shadikhana_Settings__c/fields/Twilio_From_Number__c.field-meta.xml
<CustomField>
    <fullName>Twilio_From_Number__c</fullName>
    <description>Twilio sender number used for SMS notifications</description>
    <label>Twilio From Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>